--- a/CV/index.html
+++ b/CV/index.html
@@ -32,8 +32,8 @@
                     <li class="nav-item"><a href="#section-about" class="nav-link"><span>About</span></a></li>
                     <li class="nav-item"><a href="#section-skills" class="nav-link"><span>Skills</span></a></li>
                     <li class="nav-item"><a href="#section-experience" class="nav-link"><span>Experience</span></a></li>
-                    <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
-                </ul>
+                    <!-- <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
+                </ul> -->
             </div>
         </div>
     </nav>
@@ -78,7 +78,7 @@
                     <h2 class="title">My <strong>Skills</strong></h2>
                 </div>
                 <div class="col-md-12 heading-section text-center">
-                    <h2 class="mb-2">Skills</h2>
+                    <h2 class="mb-2">Develope Hard Skill</h2>
                 </div>
             </div>
 
@@ -103,7 +103,7 @@
                     <div class="text-center ">
                         <img src="img/skill/java.png" class="image">
                         <img src="img/skill/cpp.png" class="image">
-                        <h3>C,C++, And Java</h3>
+                        <h3>C,C++, And Java (Little)</h3>
                         <p>Basic Programming</p>
                     </div>
                 </div>
@@ -111,16 +111,18 @@
                     <div class="text-center ">
                         <img src="img/skill/html.png" class="image">
                         <img src="img/skill/css.png" class="image" id="css">
-                        <h3>Html and CSS</h3>
+                        <img src="img/skill/bootstrap.png" class="image">
+                        <h3>Html, CSS, and Bootstrap</h3>
                         <p>Basic build website</p>
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
                     <div class="text-center ">
                         <img src="img/skill/canva.png" class="image">
+                        <img src="img/skill/pngegg.png" class="image">
                         <img src="img/skill/Adobe XD.png" class="image">
-                        <h3>Canva and Adobe XD</h3>
-                        <p>Editing pamflet, banner, and each others</p>
+                        <h3>Canva, Figma, and Adobe XD</h3>
+                        <p>Editing pamflet, banner, and Desain WEB or App</p>
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
@@ -136,7 +138,7 @@
 
             <div class="row justify-content-center py-5">
                 <div class="col-md-12 heading-section text-center ftco-animate ">
-                    <h2 class="mb-3">Develope soft and hard skill</h2>
+                    <h2 class="mb-2">Develope Soft Skill</h2>
                 </div>
             </div>
 
@@ -149,6 +151,8 @@
                             <p>Jamaah Masjid Manarul Ilmi</p>
                             <h5>Administrator</h5>
                             <p>Himpunan Mahasiswa Islam</p>
+                            <h5>Staff</h5>
+                            <p>Himpunan Mahasiswa Teknik Computer-Informatika</p>
                         </div>
                     </div>
                 </div>
@@ -243,6 +247,13 @@
                         <h3>Basic Training HMI</h3>
                         <span class="date "><span class="icon-calendar "></span> 2019 (HMI)</span>
                         <p>The purpose of Basic Training HMI is the development of a Muslim personality with academic quality, aware of its function and role in organizing as well as its rights and obligations as a cadre of the ummah and nation's cadre</p>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="resume-item mb-4 border border-danger">
+                        <h3>Html, CSS, and JS</h3>
+                        <span class="date "><span class="icon-calendar "></span> 2020 - 2021 (NIOMIC)</span>
+                        <p>The purpose of this training is to develop my potential in the front-end website field</p>
                     </div>
                 </div>
             </div>
