--- a/CV/index.html
+++ b/CV/index.html
@@ -159,7 +159,7 @@
                 <div class="col-md-4 text-center ">
                     <div class="servis border border-danger">
                         <div class="desc ">
-                            <h3 class="mb-3 ">Commitee</h3>
+                            <h3 class="mb-3">Commitee</h3>
                             <h5>Staff</h5>
                             <p>Ramadhan Di Kampus 41</p>
                             <h5>Administrator</h5>
@@ -168,6 +168,12 @@
                             <p>Pelatihan Spiritual Kebangsaan 2020 ITS</p>
                             <h5>Staff</h5>
                             <p>KPK 2021</p>
+                            <h5>Staff</h5>
+                            <p>Schematics 2021</p>
+                            <h5>Staff</h5>
+                            <p>YoutFest 1.0</p>
+                            <h5>Secretary and Treasure</h5>
+                            <p>YoutFest 2.0</p>
                         </div>
                     </div>
                 </div>
@@ -177,6 +183,11 @@
                             <h3 class="mb-3 ">Mentor</h3>
                             <h5>Mentor</h5>
                             <p>Mata Kuliah Agama</p>
+                            <h3 class="mb-3 ">Community</h3>
+                            <h5>Member</h5>
+                            <p>Komunitas Data Mining</p>
+                            <h5>Chair of Komunitas IT SMANEMA</h5>
+                            <p>Komunitas IT SMANEMA</p>
                         </div>
                     </div>
                 </div>
@@ -256,7 +267,15 @@
                         <p>The purpose of this training is to develop my potential in the front-end website field</p>
                     </div>
                 </div>
+                <div class="col-md-4 text-center">
+                    <div class="resume-item mb-4 border border-danger">
+                        <h3>Essay ilmiah and non-ilmiah</h3>
+                        <span class="date "><span class="icon-calendar "></span> 2021 (@essaynusantaraid)</span>
+                        <p>The purpose of this training is to develop my potential in the field of writing, especially writing scientific and non-scientific essays and personal branding</p>
+                    </div>
+                </div>
             </div>
+            
         </div>
     </section>
 
