--- a/CV/index.html
+++ b/CV/index.html
@@ -22,9 +22,10 @@
     <nav class="navbar navbar-expand-lg site-navbar navbar-light bg-light" id="pb-navbar">
         <div class="container">
             <a class="navbar-brand" href="index.html">Sammy<span>lio.</span></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-	        <span class="navbar-toggler-icon"></span>
-	      </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav nav ml-auto">
@@ -38,12 +39,14 @@
         </div>
     </nav>
 
-    <section class="site-hero" style="background-image: url(img/me/Me.JPG);" id="section-home" data-stellar-background-ratio="0.5">
+    <section class="site-hero" style="background-image: url(img/me/Me.JPG);" id="section-home"
+        data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="row intro-text align-items-center justify-content-center">
                 <div class="col-md-10 text-center pt-5">
 
-                    <h1 class="site-heading site-animate"> <b>Hello, I'm</b> <strong class="d-block">Muhammad Fikri Sandi Pratama</strong></h1>
+                    <h1 class="site-heading site-animate"> <b>Hello, I'm</b> <strong class="d-block">Muhammad Fikri
+                            Sandi Pratama</strong></h1>
                     <strong class="d-block text-white text-uppercase letter-spacing">and I'm College Student</strong>
 
                 </div>
@@ -63,10 +66,17 @@
                     <img src="img/me/1.jpg" style="border-radius: 50%;" alt="Image placeholder" class="img-fluid">
                 </div>
                 <div class="col-lg-5 pl-lg-5">
-                    <p class="lead" style="text-align: justify; ">I am an individual who is used to socializing, meeting and working with new people is normal for me. The interesting thing about me is being recognized as a good listener for everyone around me. I am a person who can make the right
-                        decisions even when under pressure. All work that is submitted to me, I will always do it in detail and finish it on time. I am a creative individual. I really like various solutions to various existing problems and being open
-                        about all possible best solutions. The creativity that I have, can be sure to help me become a good leader.</p>
-                    <p class="mb-5 " style="text-align: justify; font-style: oblique;">"I am not the best among all of you, if I look good then help me and if I look bad then straighten me out"- Abu Bakar Ash-Shiddiq</p>
+                    <p class="lead" style="text-align: justify; ">I am an individual who is used to socializing, meeting
+                        and working with new people is normal for me. The interesting thing about me is being recognized
+                        as a good listener for everyone around me. I am a person who can make the right
+                        decisions even when under pressure. All work that is submitted to me, I will always do it in
+                        detail and finish it on time. I am a creative individual. I really like various solutions to
+                        various existing problems and being open
+                        about all possible best solutions. The creativity that I have, can be sure to help me become a
+                        good leader.</p>
+                    <p class="mb-5 " style="text-align: justify; font-style: oblique;">"I am not the best among all of
+                        you, if I look good then help me and if I look bad then straighten me out"- Abu Bakar
+                        Ash-Shiddiq</p>
                 </div>
             </div>
     </section>
@@ -231,7 +241,9 @@
                     <div class="resume-item mb-4 border border-danger">
                         <h3>LKMM-Pra-TD</h3>
                         <span class="date "><span class="icon-calendar "></span> 2019 (ITS)</span>
-                        <p>The abbreviation of LKMM is Latihan Keterampilan Manajemen Mahasiswa. The purpose of LKMM pra-TD is supply new students with basic skills in communication, knowing self potential, developing character critical and position themselves
+                        <p>The abbreviation of LKMM is Latihan Keterampilan Manajemen Mahasiswa. The purpose of LKMM
+                            pra-TD is supply new students with basic skills in communication, knowing self potential,
+                            developing character critical and position themselves
                             effectively in student organizations.</p>
 
                     </div>
@@ -241,15 +253,19 @@
                         <h3>LKMW-TD</h3>
                         <span class="date "><span class="icon-calendar "></span> 2019 (ITS)</span>
 
-                        <p>The abbreviation of LKMW is Latihan Keterampilan Mahasiswa Wirausaha. The Purpose of LKMW TD is hope that ITS new students can be motivated to start their entrepreneurial career as early as possible by being equipped with materials
-                            that support a prospective young entrepreneur to start a business starting from looking for ideas, creating a canvas business model, to executing the idea so that it is realized.</p>
+                        <p>The abbreviation of LKMW is Latihan Keterampilan Mahasiswa Wirausaha. The Purpose of LKMW TD
+                            is hope that ITS new students can be motivated to start their entrepreneurial career as
+                            early as possible by being equipped with materials
+                            that support a prospective young entrepreneur to start a business starting from looking for
+                            ideas, creating a canvas business model, to executing the idea so that it is realized.</p>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="resume-item mb-4 border border-danger">
                         <h3>PKTI-TD</h3>
                         <span class="date "><span class="icon-calendar "></span> 2019 (ITS)</span>
-                        <p>The abbreviation of PKTI is Pelatihan Karya Tulis Ilmiah. The purpose of PKTI TD is to improve students' soft skills in the scientific field</p>
+                        <p>The abbreviation of PKTI is Pelatihan Karya Tulis Ilmiah. The purpose of PKTI TD is to
+                            improve students' soft skills in the scientific field</p>
 
                     </div>
                 </div>
@@ -257,7 +273,9 @@
                     <div class="resume-item mb-4 border border-danger">
                         <h3>Basic Training HMI</h3>
                         <span class="date "><span class="icon-calendar "></span> 2019 (HMI)</span>
-                        <p>The purpose of Basic Training HMI is the development of a Muslim personality with academic quality, aware of its function and role in organizing as well as its rights and obligations as a cadre of the ummah and nation's cadre</p>
+                        <p>The purpose of Basic Training HMI is the development of a Muslim personality with academic
+                            quality, aware of its function and role in organizing as well as its rights and obligations
+                            as a cadre of the ummah and nation's cadre</p>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
@@ -271,11 +289,12 @@
                     <div class="resume-item mb-4 border border-danger">
                         <h3>Essay ilmiah and non-ilmiah</h3>
                         <span class="date "><span class="icon-calendar "></span> 2021 (@essaynusantaraid)</span>
-                        <p>The purpose of this training is to develop my potential in the field of writing, especially writing scientific and non-scientific essays and personal branding</p>
+                        <p>The purpose of this training is to develop my potential in the field of writing, especially
+                            writing scientific and non-scientific essays and personal branding</p>
                     </div>
                 </div>
             </div>
-            
+
         </div>
     </section>
 
