--- a/quiz1/food/food.html
+++ b/quiz1/food/food.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <link rel="stylesheet" href="food.css">
 
@@ -18,14 +19,18 @@
 <body>
 
     <header>
+        <div class="menu-toggle" id="hamburger">
+            <i class="fas fa-bars"></i>
+        </div>
+        <div class="overlay"></div>
         <div class="container">
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="profile/profile.html">Profile</a></li>
-                    <li><a href="hometown/hometown.html">Hometown</a></li>
-                    <li><a href="food/food.html">Local Food</a></li>
-                    <li><a href="tourist/tourist.html">Tourist Place</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../profile/profile.html">Profile</a></li>
+                    <li><a href="../hometown/hometown.html">Hometown</a></li>
+                    <li><a href="food.html">Local Food</a></li>
+                    <li><a href="../tourist/tourist.html">Tourist Place</a></li>
                 </ul>
             </nav>
         </div>
@@ -106,27 +111,27 @@
                 </div>
             </div>
             <div class="row align-content-center">
-                <div class="col-6 ">
+                <div class="col-lg-6 col-sm-6 pb-5">
                     <h1 style="text-align: center;">How to Make Pudak</h1>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/P6UMIRo2mmw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <div class="col-6 pb-5">
+                <div class="col-lg-6 col-sm-6 pb-5">
                     <h1 style="text-align: center;">How to Make Sego Karak</h1>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/f4jVjiZ_heQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <div class="col-6 pb-5">
+                <div class="col-lg-6 col-sm-6 pb-5">
                     <h1 style="text-align: center;">How to Make Otak-otak Bandeng</h1>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/x-mMb0LXzYk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <div class="col-6 pb-5">
+                <div class="col-lg-6 col-sm-6 pb-5">
                     <h1 style="text-align: center;">How to Make Nasi Krawu</h1>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/qy5sBUIM3ak" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <div class="col-6 pb-5">
+                <div class="col-lg-6 col-sm-6 pb-5">
                     <h1 style="text-align: center;">How to Make Martabak Usus</h1>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/csDwBnz1Bd8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <div class="col-6 pb-5">
+                <div class="col-lg-6 col-sm-6 pb-5">
                     <h1 style="text-align: center;">How to Make Lontong Roomo</h1>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/bu4xaphacDc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
