--- a/quiz1/index.html
+++ b/quiz1/index.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css">
 
@@ -18,6 +19,10 @@
 <body>
 
     <header>
+        <div class="menu-toggle" id="hamburger">
+            <i class="fas fa-bars"></i>
+        </div>
+        <div class="overlay"></div>
         <div class="container">
             <nav>
                 <ul>
@@ -30,7 +35,7 @@
             </nav>
         </div>
         <div class="row" style="align-items: center;">
-            <div class="deskripsi col-6" style="padding-left: 9%; padding-top: 9%;">
+            <div class="deskripsi col-lg-6 col-sm-6">
                 <p id="text-1">Hello, My name is</p>
                 <p id="text-2"> Muhammad Fikri Sandi Pratama</p>
                 <p id="text-3"><span id="text"></span> </p>
@@ -39,7 +44,7 @@
                     in Gresik city.</p>
 
             </div>
-            <div class="col-6" style="text-align: center; padding-top: 9%; padding-left: 50px ;">
+            <div class="frame col-lg-6 col-sm-6">
                 <div>
                     <iframe width="560" height="300" style="border-radius: 20px;"
                         src="https://www.youtube.com/embed/Se4WoWsPxps" title="YouTube video player" frameborder="0"
@@ -69,42 +74,3 @@
 </body>
 
 </html>
-
-
-<!-- <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel"
-                    style="max-width: 550px; ">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="img/slide/1.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Pelabuhan</h5>
-                                <p>Some representative placeholder content for the first slide.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/slide/2.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Pakaian</h5>
-                                <p>Some representative placeholder content for the second slide.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <video src="https://www.youtube.com/watch?v=Se4WoWsPxps"></video>
-                            <img src="img/slide/3.png" class="d-block w-100" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h5>Third slide label</h5>
-                                <p>Some representative placeholder content for the third slide.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div> -->
