--- a/quiz1/profile/profile.html
+++ b/quiz1/profile/profile.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <link rel="stylesheet" href="profile.css">
 
@@ -18,6 +19,10 @@
 <body>
 
     <header>
+        <div class="menu-toggle" id="hamburger">
+            <i class="fas fa-bars"></i>
+        </div>
+        <div class="overlay"></div>
         <div class="container">
             <nav>
                 <ul>
@@ -31,7 +36,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col" id="nama" style="text-align: center; padding: 15%;">
+                <div class="col-lg-12 col-sm-12" id="nama">
                     <h1><b>Hello, I'm</b> <strong class="d-block">Muhammad Fikri
                         Sandi Pratama</strong></h1>
                     <h1><strong class="d-block letter-spacing">and I'm College Student</strong></h1>
