--- a/quiz1/food/food.html
+++ b/quiz1/food/food.html
@@ -34,6 +34,13 @@
                 </ul>
             </nav>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="col" id="typing" style="height: 70vh; display: flex; align-items: center; justify-content: center;">
+                    <p id="text-3"><span id="text"></span> </p>
+                </div>
+            </div>
+        </div>
     </header>
 
     <section class="site-section" id="section-food">
