--- a/quiz1/food/food.html
+++ b/quiz1/food/food.html
@@ -12,8 +12,9 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <link rel="stylesheet" href="food.css">
-
-    <title>Hello, world!</title>
+    <meta name="author" content="M.Fikri Sandi Pratama">
+    <link rel="shortcut icon" href="../favicon.ico"/>
+    <title>Grissie</title>
 </head>
 
 <body>
