--- a/quiz1/profile/index.html
+++ b/quiz1/profile/index.html
@@ -28,10 +28,10 @@
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="profile.html">Profile</a></li>
-                    <li><a href="../hometown/hometown.html">Hometown</a></li>
-                    <li><a href="../food/food.html">Local Food</a></li>
-                    <li><a href="../tourist/tourist.html">Tourist Place</a></li>
+                    <li><a href="index.html">Profile</a></li>
+                    <li><a href="../hometown/index.html">Hometown</a></li>
+                    <li><a href="../food/index.html">Local Food</a></li>
+                    <li><a href="../tourist/index.html">Tourist Place</a></li>
                 </ul>
             </nav>
         </div>
