--- a/quiz1/hometown/index.html
+++ b/quiz1/hometown/index.html
@@ -25,10 +25,10 @@
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="../profile/profile.html">Profile</a></li>
-                    <li><a href="hometown.html">Hometown</a></li>
-                    <li><a href="../food/food.html">Local Food</a></li>
-                    <li><a href="../tourist/tourist.html">Tourist Place</a></li>
+                    <li><a href="../profile/index.html">Profile</a></li>
+                    <li><a href="index.html">Hometown</a></li>
+                    <li><a href="../food/index.html">Local Food</a></li>
+                    <li><a href="../tourist/index.html">Tourist Place</a></li>
                 </ul>
             </nav>
         </div>
