--- a/quiz1/index.html
+++ b/quiz1/index.html
@@ -19,6 +19,8 @@
 </head>
 
 <body>
+
+
     <header>
         <div class="menu-toggle" id="hamburger">
             <i class="fas fa-bars"></i>
@@ -28,10 +30,10 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="profile/profile.html">Profile</a></li>
-                    <li><a href="hometown/hometown.html">Hometown</a></li>
-                    <li><a href="food/food.html">Local Food</a></li>
-                    <li><a href="tourist/tourist.html">Tourist Place</a></li>
+                    <li><a href="profile/index.html">Profile</a></li>
+                    <li><a href="hometown/index.html">Hometown</a></li>
+                    <li><a href="food/index.html">Local Food</a></li>
+                    <li><a href="tourist/index.html">Tourist Place</a></li>
                 </ul>
             </nav>
         </div>
@@ -54,6 +56,7 @@
             </div>
         </div>
     </header>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -67,7 +70,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
     <script src="main.js"></script>
-
 
 </body>
 
