--- a/quiz1/profile/index.html
+++ b/quiz1/profile/index.html
@@ -55,7 +55,8 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-lg-7 mb-5" style="justify-content: center; text-align: center;">
-                    <img src="../img/me/1.jpg" style="border-radius: 50%; height: 450px; width: 450px;" alt="Image placeholder" class="img-fluid">
+                    <img src="../img/me/1.jpg" style="border-radius: 50%; height: 450px; width: 450px;" 
+                    alt="Image placeholder" class="img-fluid">
                 </div>
                 <div class="col-lg-5 mb-5" style="width: 500px;">
                     <p class="lead" style="text-align: justify;">I am an individual who is used to socializing, meeting
@@ -84,7 +85,6 @@
                     <h2 class="mb-2">Develope Hard Skill</h2>
                 </div>
             </div>
-
             <div class="row ">
                 <div class="col-md-4 mb-3">
                     <div class="text-center">
@@ -138,13 +138,11 @@
                     </div>
                 </div>
             </div>
-
             <div class="row justify-content-center py-3">
                 <div class="col-md-12 heading-section text-center">
                     <h2 class="mb-2">Develope Soft Skill</h2>
                 </div>
             </div>
-
             <div class="row" style="text-align: center;">
                 <div class="col-md-4 text-center ">
                     <div class="servis border border-danger">
@@ -207,7 +205,6 @@
                     <h2 class="mb-2">Working</h2>
                 </div>
             </div>
-
             <div class="row ">
                 <div class="col-md-4">
                     <div class="text-center">
@@ -220,13 +217,11 @@
                     </div>
                 </div>
             </div>
-
             <div class="row justify-content-center py-5 mt-5 ">
                 <div class="col-md-12 heading-section text-center">
                     <h2 class="mb-2">Training</h2>
                 </div>
             </div>
-
             <div class="row">
                 <div class="col-md-4 text-center">
                     <div class="resume-item mb-4 border border-danger">
@@ -236,7 +231,6 @@
                             pra-TD is supply new students with basic skills in communication, knowing self potential,
                             developing character critical and position themselves
                             effectively in student organizations.</p>
-
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
