--- a/CV/index.html
+++ b/CV/index.html
@@ -14,14 +14,14 @@
     <link rel="stylesheet" href="css/style.css">
 
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,700" rel="stylesheet">
-    <title>Sammy</title>
+    <title>FS</title>
 </head>
 
 <body data-spy="scroll" data-target="#pb-navbar" data-offset="200">
 
     <nav class="navbar navbar-expand-lg site-navbar navbar-light bg-light" id="pb-navbar">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Sammy<span>lio.</span></a>
+            <a class="navbar-brand" href="index.html">FS<span>lio.</span></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -66,14 +66,12 @@
                     <img src="img/me/1.jpg" style="border-radius: 50%;" alt="Image placeholder" class="img-fluid">
                 </div>
                 <div class="col-lg-5 pl-lg-5">
-                    <p class="lead" style="text-align: justify; ">I am an individual who is used to socializing, meeting
-                        and working with new people is normal for me. The interesting thing about me is being recognized
-                        as a good listener for everyone around me. I am a person who can make the right
-                        decisions even when under pressure. All work that is submitted to me, I will always do it in
-                        detail and finish it on time. I am a creative individual. I really like various solutions to
-                        various existing problems and being open
-                        about all possible best solutions. The creativity that I have, can be sure to help me become a
-                        good leader.</p>
+                    <p class="lead" style="text-align: justify; ">Saya adalah pribadi yang dapat membuat keputusan
+                        dengan bijak dan akan mengerjakan secara detail, serta dapat menyelesaikan tepat waktu dengan
+                        berpikir kritis dan kreatif. Saya mampu bersosialisasi dan bekerja sama dengan orang baru.
+                        Mempelajari hal-hal baru dan dapat menguasainya merupakan keinginan saya seperti mendalami web
+                        developer khususnya front-end developer dan UI/UX.
+                        .</p>
                     <p class="mb-5 " style="text-align: justify; font-style: oblique;">"I am not the best among all of
                         you, if I look good then help me and if I look bad then straighten me out"- Abu Bakar
                         Ash-Shiddiq</p>
@@ -88,7 +86,7 @@
                     <h2 class="title">My <strong>Skills</strong></h2>
                 </div>
                 <div class="col-md-12 heading-section text-center">
-                    <h2 class="mb-2">Develope Hard Skill</h2>
+                    <h2 class="mb-2">Pengembangan Hard Skill</h2>
                 </div>
             </div>
 
@@ -97,8 +95,11 @@
                     <div class="text-center">
                         <img src="img/skill/filmora.png" class="image">
                         <img src="img/skill/adobe.png" class="image">
-                        <h3>Filmora and Adobe Premiere</h3>
-                        <p>Just edit video</p>
+                        <img src="img/skill/canva.png" class="image">
+                        <img src="img/skill/pngegg.png" class="image">
+                        <img src="img/skill/Adobe XD.png" class="image">
+                        <h3>Filmora, Adobe Premiere, dan Tools Desain</h3>
+                        <p>Editing pamflet, banner, video dan Desain WEB or App</p>
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
@@ -121,18 +122,17 @@
                     <div class="text-center ">
                         <img src="img/skill/html.png" class="image">
                         <img src="img/skill/css.png" class="image" id="css">
+                        <img src="img/skill/js.png" class="image">
                         <img src="img/skill/bootstrap.png" class="image">
-                        <h3>Html, CSS, and Bootstrap</h3>
-                        <p>Basic build website</p>
+                        <h3>Html, CSS, JS, and Bootstrap</h3>
+                        <p>Basic membuat website</p>
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
                     <div class="text-center ">
-                        <img src="img/skill/canva.png" class="image">
-                        <img src="img/skill/pngegg.png" class="image">
-                        <img src="img/skill/Adobe XD.png" class="image">
-                        <h3>Canva, Figma, and Adobe XD</h3>
-                        <p>Editing pamflet, banner, and Desain WEB or App</p>
+                        <img src="img/skill/wp.png" class="image">
+                        <h3>Wordpress Dengan Elementor</h3>
+                        <p>Menggunakan wordpress untuk membangun website</p>
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
@@ -194,10 +194,8 @@
                             <h5>Mentor</h5>
                             <p>Mata Kuliah Agama</p>
                             <h3 class="mb-3 ">Community</h3>
-                            <h5>Member</h5>
-                            <p>Komunitas Data Mining</p>
                             <h5>Chair of Komunitas IT SMANEMA</h5>
-                            <p>Komunitas IT SMANEMA</p>
+                            <p>Komunitas IT SMA NEGERI 1 MAMYAR GRESIK</p>
                         </div>
                     </div>
                 </div>
@@ -213,23 +211,45 @@
                     <h2 class="title">My <strong>Experience</strong></h2>
                 </div>
                 <div class="col-md-12 heading-section text-center">
-                    <h2 class="mb-2">Working</h2>
+                    <h2 class="mb-2">Magang, KKN, and Surveyor</h2>
                 </div>
             </div>
-
             <div class="row ">
-                <div class="col-md-4">
-                    <div class="text-center">
-                        <div class="resume-item border border-danger">
-                            <h3>SURVEYOR</h3>
-                            <span class="date "><span class="icon-calendar "></span> July 2020</span>
-                            <p>Survey of regional head elections in Gresik district in 2020</p>
-                            <span class="school ">PT INDOPOL</span>
-                        </div>
+                <div class="col-md-4 text-center">
+
+                    <div class="resume-item border border-danger">
+                        <h3>SURVEYOR</h3>
+                        <span class="date "><span class="icon-calendar "></span> July 2020</span>
+                        <p>Survei politik untuk mengetahui kriteria pemimpin yang disukai masyarakat di daerah
+                            gresik khususnya di 3 desa diantaranya dari kecamatan Driyorejo, Cerme, dan
+                            Balongpanggang</p>
+                        <span class="school ">PT INDOPOL</span>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="resume-item border border-danger">
+                        <h3>Back-end internship 1</h3>
+                        <span class="date "><span class="icon-calendar "></span> 21 Agustus 2021 - 21 Oktober
+                            2021</span>
+                        <p>Magang batch 1 sebagai back-end di Surabaya Survey Solution, dengan membuat website yang
+                            masih belum selesai karena waktu dan masih belajar pada saat itu.
+                        </p>
+                        <a href="https://surabaya-survey-solution.herokuapp.com">www.surabaya-survey-solution</a>
+                        <span class="school ">Surabaya Survey Solution</span>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="resume-item border border-danger">
+                        <h3>Kuliah Kerja Nyata</h3>
+                        <span class="date "><span class="icon-calendar "></span> Agustus 2021 - Oktober 2021</span>
+                        <p>Pada kegiatan Kuliah Kerja Nyata saya dan teman-teman diamanahi membuat website untuk sebuah
+                            wilayah Desa Alaskokon, Bangkalan, Madura dengan menggunakan wordpress.
+                        </p>
+                        <a href="https://brandingalaskokon.com/">www.brandingalaskokon.com</a>
+                        <span class="school ">KKN ITS</span>
                     </div>
                 </div>
             </div>
-
             <div class="row justify-content-center py-5 mt-5 ">
                 <div class="col-md-12 heading-section text-center">
                     <h2 class="mb-2">Training</h2>
@@ -241,10 +261,10 @@
                     <div class="resume-item mb-4 border border-danger">
                         <h3>LKMM-Pra-TD</h3>
                         <span class="date "><span class="icon-calendar "></span> 2019 (ITS)</span>
-                        <p>The abbreviation of LKMM is Latihan Keterampilan Manajemen Mahasiswa. The purpose of LKMM
-                            pra-TD is supply new students with basic skills in communication, knowing self potential,
-                            developing character critical and position themselves
-                            effectively in student organizations.</p>
+                        <p>Singkatan dari LKMM adalah Latihan Keterampilan Manajemen Mahasiswa. Tujuan LKMM
+                            pra-TD membekali mahasiswa baru dengan keterampilan dasar dalam berkomunikasi, mengetahui
+                            potensi diri,
+                            dan mengembangkan karakter kritis.</p>
 
                     </div>
                 </div>
@@ -253,19 +273,19 @@
                         <h3>LKMW-TD</h3>
                         <span class="date "><span class="icon-calendar "></span> 2019 (ITS)</span>
 
-                        <p>The abbreviation of LKMW is Latihan Keterampilan Mahasiswa Wirausaha. The Purpose of LKMW TD
-                            is hope that ITS new students can be motivated to start their entrepreneurial career as
-                            early as possible by being equipped with materials
-                            that support a prospective young entrepreneur to start a business starting from looking for
-                            ideas, creating a canvas business model, to executing the idea so that it is realized.</p>
+                        <p>Singkatan dari LKMW adalah Latihan Keterampilan Mahasiswa Wirausaha. Tujuan LKMW TD
+                            diharapkan mahasiswa baru ITS dapat termotivasi untuk memulai karir wirausahanya
+                            secepat mungkin dengan dilengkapi material
+                            yang mendukung. Seorang calon wirausahawan muda untuk memulai bisnis dimulai dari mencari
+                            ide, membuat model bisnis kanvas, hingga mengeksekusi ide hingga terwujud.</p>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="resume-item mb-4 border border-danger">
                         <h3>PKTI-TD</h3>
                         <span class="date "><span class="icon-calendar "></span> 2019 (ITS)</span>
-                        <p>The abbreviation of PKTI is Pelatihan Karya Tulis Ilmiah. The purpose of PKTI TD is to
-                            improve students' soft skills in the scientific field</p>
+                        <p>Singkatan dari PKTI adalah Pelatihan Karya Tulis Ilmiah. Tujuan dari PKTI TD adalah untuk
+                            meningkatkan soft skill mahasiswa dalam bidang keilmiahan</p>
 
                     </div>
                 </div>
@@ -273,24 +293,45 @@
                     <div class="resume-item mb-4 border border-danger">
                         <h3>Basic Training HMI</h3>
                         <span class="date "><span class="icon-calendar "></span> 2019 (HMI)</span>
-                        <p>The purpose of Basic Training HMI is the development of a Muslim personality with academic
-                            quality, aware of its function and role in organizing as well as its rights and obligations
-                            as a cadre of the ummah and nation's cadre</p>
+                        <p>Tujuan Pelatihan Dasar HMI adalah pengembangan pribadi muslim yang berwawasan akademik,
+                            berkualitas, sadar akan fungsi dan perannya dalam berorganisasi serta hak dan kewajibannya
+                            sebagai kader ummat dan kader bangsa</p>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="resume-item mb-4 border border-danger">
                         <h3>Html, CSS, and JS</h3>
                         <span class="date "><span class="icon-calendar "></span> 2020 - 2021 (NIOMIC)</span>
-                        <p>The purpose of this training is to develop my potential in the front-end website field</p>
+                        <p>Tujuan dari pelatihan ini adalah untuk mengembangkan potensi saya di bidang website khususnya
+                            bagian front-end</p>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="resume-item mb-4 border border-danger">
                         <h3>Essay ilmiah and non-ilmiah</h3>
                         <span class="date "><span class="icon-calendar "></span> 2021 (@essaynusantaraid)</span>
-                        <p>The purpose of this training is to develop my potential in the field of writing, especially
-                            writing scientific and non-scientific essays and personal branding</p>
+                        <p>Tujuan dari pelatihan ini adalah untuk mengembangkan potensi saya di bidang menulis khususnya
+                            menulis esai ilmiah dan non-ilmiah serta personal branding</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center py-5 mt-5 ">
+                <div class="col-md-12 heading-section text-center">
+                    <h2 class="mb-2">Portofolio Lain</h2>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <div class="resume-item border border-danger">
+                        <h4>Desain Web Ngeprinting</h4>
+                        Link : <a href="https://www.figma.com/proto/3RqXZo20mC3DpTJ3jTDrzM/FP-APSI?page-id=0%3A1&node-id=148%3A477&viewport=241%2C48%2C0.12&scaling=scale-down&starting-point-node-id=31%3A68&show-proto-sidebar=1">Ngeprinting Desain</a>
+                        <h4>Website Wordpress Portal Berita</h4>
+                        Link : <a href="www.seruantara.com">Seruantara</a>
+                        <h4>Website Sejarah (Belum Deploy)</h4>
+                        Link : <a href="https://github.com/Ultimate-Desain/Sejarah-Fantastis">Web Sejarah</a>
+                        <h4>Portofolio lain Github</h4>
+                        Link : <a href="https://github.com/fikrisandi">Github Fikrisandi</a>
                     </div>
                 </div>
             </div>
