--- a/CV/index.html
+++ b/CV/index.html
@@ -86,7 +86,7 @@
                     <h2 class="title">My <strong>Skills</strong></h2>
                 </div>
                 <div class="col-md-12 heading-section text-center">
-                    <h2 class="mb-2">Pengembangan Hard Skill</h2>
+                    <h2 class="mb-2">Develope Hard Skill</h2>
                 </div>
             </div>
 
