--- a/CV/index.html
+++ b/CV/index.html
@@ -327,7 +327,7 @@
                         <h4>Desain Web Ngeprinting</h4>
                         Link : <a href="https://www.figma.com/proto/3RqXZo20mC3DpTJ3jTDrzM/FP-APSI?page-id=0%3A1&node-id=148%3A477&viewport=241%2C48%2C0.12&scaling=scale-down&starting-point-node-id=31%3A68&show-proto-sidebar=1">Ngeprinting Desain</a>
                         <h4>Website Wordpress Portal Berita</h4>
-                        Link : <a href="www.seruantara.com">Seruantara</a>
+                        Link : <a href="https://seruantara.com/">Seruantara</a>
                         <h4>Website Sejarah (Belum Deploy)</h4>
                         Link : <a href="https://github.com/Ultimate-Desain/Sejarah-Fantastis">Web Sejarah</a>
                         <h4>Portofolio lain Github</h4>
